解决图片上传显示问题

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,6 @@ mybatis-plus:
 
   mapper-locations: classpath:com/bc/mapper/xml/*.xml
   type-aliases-package: com.bc.entity
+
+upload:
+  path: D:/上传图片/
